--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -62,6 +62,28 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .input-box {
+    background: #23232a;
+    color: #e0e6ff;
+    border-color: #646cff;
+  }
+
+  .input-box:hover {
+    background: #181824;
+    border-color: #646cff;
+  }
+
+  .input-box:focus {
+    background: #23232a;
+    border-color: #535bf2;
+    box-shadow: 0 0 0 2px #646cff;
+  }
+
+  .input-box:active {
+    background: #181824;
+    border-color: #213547;
+  }
+
   .input-box.input-error {
     background: #2a1a1a;
     color: #ffbdbd;
@@ -74,5 +96,13 @@
 
   .input-field.error .input-label {
     color: #ffbdbd;
+  }
+
+  .input-label {
+    color: #e0e6ff;
+  }
+
+  .input-description {
+    color: #b3baf7;
   }
 }
